style.css
/* Fonts */
@font-face {
    font-family: "SharpSans";
    src:
      url("./assets/fonts/EOT/SharpSansDispNo1-Medium.eot") format("opentype"),
      url("./assets/fonts/WOFF/SharpSansDispNo1-Medium.woff") format("woff");
}
:root {
    --main-bg-color: black;
    --color:white;
    --space: 30px;
    --font-size-small: 16px;
    --font-size-body: 18px;
    --font-size-body-larger: 24px;
    --font-size-large: 30px;
    --font-size-larger: 50px;
    --left-column: 305px;
    --space-large:80px;
    --light-bg-color: rgb(25, 24, 24);
}
a:link, a:hover, a:visited{
    color:inherit;
}
body p{
    line-height: 1.4;
}
body.english .english{
    display: inherit;
    /* letter-spacing: 0.03em; */
}
body .russian{
    display: none;
  font-optical-sizing: auto;
}
body.english .russian{
    display: none;
}
body.russian .russian{
    display: inherit;
}
body.russian .english{
    display: none;
}
#canvas canvas{
    display: block;
    position: fixed;
    top:0;
    left:0;
    opacity: 0.1;
    mix-blend-mode: color-dodge;
    pointer-events: none;
    z-index: 3;
}
body{
    margin:0;
    padding:0;
    background-color: var(--main-bg-color);
    color:var(--color);
    font-family: "SharpSans",sans-serif;
    font-size:var(--font-size-body);
    text-align: justify;
}

h1,h2,h3,h4,h5,h6{
    font-weight: normal;
}
h1{
    font-size:var(--font-size-larger);
}
/* Header */
header{
    padding: var(--space);
    position:fixed;
    top:0;
    left:0;
    width: calc(100vw - (var(--space) * 2));
    height: calc(100vh - (var(--space) * 2));
    overflow: hidden;
    z-index: 0;
}
header video{
    position:absolute;
    min-width: 100vw;
    min-height: 100vh;
    height: 100vh;
    opacity: 0.5;
    pointer-events: none;
    left:0;
    top:0;
}
header #banner{
    position:absolute;
    width: 100vw;
    height: 100vh;
    opacity: 0.3;
    pointer-events: none;
    left:0;
    top:0;
    background-size: cover;
    background-repeat: no-repeat;
}
/* LOGO */
#logo{
    position:fixed;
    z-index: 9;
}
#logo a{
    text-decoration: none;
    color:inherit
}
#logo h1{
    font-size: var(--font-size-large);
    margin:0;
    line-height: 1;
    position: fixed;
}
#logo h1:first-child{
    transform-origin: top right;
    transform: translateX(-100%) rotate(-90deg);
    left:var(--space);
    top:calc(var(--space) + 2px);
}
#logo h1:last-child{
    left:var(--space-large);
    top:var(--space);
}
/* Language */
#language-toggle{
    padding: 10px;
    padding-bottom:0;
    font-size:var(--font-size-body);
    position:fixed;
    bottom: calc(var(--space)/2 + 5px);
    right: var(--space);
    z-index: 9;
    cursor: pointer;
}

/* Introduction */

header #intro{
    position: absolute;
    z-index: 2;
    padding-left: var(--left-column);
    padding-right:50px;
    max-height: calc(100vh - ((var(--space-large)*2) + var(--space)));
    overflow: scroll;
    padding-bottom: calc(var(--space-large));
    top: 50%;
    transform: translateY(-50%);
}
#hp-intro{
    font-size: var(--font-size-large);
    margin-top:0;
}
#hp-intro em{
    font-size: var(--font-size-body-larger);
    display: inline-block;
    margin: 10px 0;
}
#hp-intro a{
    font-size: var(--font-size-body-larger);
}
#hp-intro span{
    margin: 15px 0;
    display: inline-block;
}
header #intro p{
    max-width: 900px;
    text-align: justify;
}
header #intro #hp-intro{
    text-align: left;
}
header #intro h1{
    text-align:left;
    margin:0;
    position: relative;
    max-width: 900px;
}
#curatorial-statement p{
    margin: var(--space-large);
    white-space: normal;
    margin-bottom: calc(var(--space-large) * 2)
}
#curatorial-statement .sig{
   text-align: right;
   margin-top: var(--space);
   display:block;
   
}
/* footer */

footer{
    position:fixed;
    bottom:0;
    text-align: right;
    max-height: 50vh;
    transition: 0.5s;
    max-width: 100vw;
    width: 100%;
    height: calc((var(--space)/2) + 2em);
    right:0;
    background-color: rgba(0,0,0,1);
    z-index: 8;
}

footer.on{
    width: 100vw;
    background-color: rgba(0,0,0,1);
    height: 300px;
    z-index: 99;
}

footer h4{
    cursor: pointer;
    margin:0;
    margin-left: calc(var(--space) + 5px);
    padding:10px 5px;
    padding-right: 40px;
    text-align: right;

    /* transform-origin: top right;
    position:absolute; */
    /* transform: rotate(-90deg);
    top: -16px;
    left: -200px; */
}

footer div{
    transition:0;
    opacity: 0;
    float:right;
    padding-right: 10px;
    max-height: 0;
}
footer.on div{
    max-height: 100vh;
    opacity: 1;
}
footer div p{
    margin:0;
    max-width: 700px;
    padding: 0 30px;
    padding-top:10px;
}
footer a{
    display: inline-block;
    padding: 10px;
    border:1px solid;
    color: white;
    cursor: pointer;
    text-decoration: none;
}
footer a:hover{
    cursor: pointer;
    background-color: var(--light-bg-color);
}
/*main*/

main{
    background-color: var(--main-bg-color);
    min-height: 500px;
    position:relative;
    z-index:4;
    margin-top: calc(100vh - 50px);
    padding: var(--space-large);
}

/* Gallery */
#gallery{
    display: flex;
    flex-wrap: wrap;    
}
.description{
    max-width: 1000px;
    margin: 0 auto;
}
#gallery .artist{
    display: flex;
    margin-right: calc(var(--space) * 2);
    flex-direction: column;
    width: auto;
    flex-basis:calc(33% - (var(--space) + 10px));
    color:inherit;
    text-decoration: none;
    cursor: pointer;
    margin-top: calc(var(--space) * 2);
}
#gallery .artist:hover{
    opacity: 0.6;
}
#gallery .artist:nth-child(3n){
    margin-right:0;
}
#gallery .artist img{
    width: calc(100%);
    margin-bottom:var(--space);
}
#gallery .artist span{
    text-align: left;
}

/****************/
/* Artist Pages */
/****************/
.work{
    display: block;
    width: 60%;
    
    margin: calc(var(--space) * 4) auto;
}
.double .work.exception{
    flex-basis: 30%;
}
.work.horizontal{
    width: 100%;
}
.work.exception{
    width: 30%;
}
.main-up{
    display: block;
    cursor: pointer;
    width: 50px;
    height: 30px;
    position: absolute;
    top:calc((var(--space-large) - 40px)*-1);
    left: calc(50% - 25px);
    margin:0 auto;
    background-color: var(--main-bg-color);
    padding: calc(var(--space)/2);
    padding-top:5px;
}
.work.medium-horizontal{
    width: 80%;
}
.work span{
    text-align: left;
}
.work img{
  width: 100%;
  margin-bottom: 30px;
}
.work video, .work iframe{
    width: 100%;
}
.work > div{
    margin-bottom: var(--space);
}
.triple{
    display: flex;
}
.triple .work:nth-child(2){
    margin: calc(var(--space) * 2);
}
.triple .work{
    display: inline-block;
    width: calc(33% - var(--space));
}
.double{
    display: flex;
}
.double .work:first-child{
    margin-right: calc(var(--space) * 2);
}
.double .work{
    display: inline-block;
    width: calc(50% - var(--space));
}

.double.hierarchy .work:first-child {
    width: calc(41.3% - var(--space));
}
.double.hierarchy .work:nth-child(2) {
    width: calc(60% - var(--space));
}
.double.hierarchy2 .work:first-child {
    width: calc(38.3% - var(--space));
}
.double.hierarchy2 .work:nth-child(2) {
    width: calc(60% - var(--space));
}
.work audio{
    width: 100%;
    display:block;
    margin-bottom: var(--space);
}

#next-artist{
    margin-left: var(--left-column);
    width: calc(100% - var(--left-column));
    background-size: cover;
    background-repeat: no-repeat;
    height: 450px;
    display: flex;
    text-decoration: none;
    color:inherit;
    align-items: center;
    justify-content: center;
}
#next-artist h1{
    font-size: var(--font-size-large);
}
#back-to-home{
    z-index: 4;
    height: 350px;
    cursor: pointer;
    overflow: hidden;
    display: block;
    position:relative;
    display: flex;
    justify-content: center;
    align-items: center;
    text-decoration: none;
}
#back-to-home video{
    position:absolute;
    filter: brightness(50%);
    z-index: 0;
}
#back-to-home button{
    position:relative;
    z-index: 2;
    padding:10px;
    font-family: inherit;
    font-size:inherit;
    color:white;
    background-color: black;
    border: none;
}
#back-to-home:hover button{
    background:  var(--light-bg-color);
}

/* LIGHTBOX*/
#lightbox{
    padding: var(--space);
    height:calc(100vh - (var(--space) * 2));
    width: calc(100vw - (var(--space) * 2));
    background-color: rgba(0,0,0,0.8);
    position:fixed;
    top:0;
    left:0;
    z-index: 999999;
    display: none;
}
#lightbox.on{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;

}
#lightbox img{
    width: 100%;
    height: 100%;
    object-fit: contain;
}
.poem{
    text-align: center;
}
.poem strong{
    font-size: var(--font-size-body-larger);
}
/* MOBILE */
@media(max-width: 1105px) {
        
    :root{
        --space: 10px;
        --font-size-body: 17px;
        --font-size-large: 22px;
        --font-size-larger: 30px;
        --font-size-body-larger: 20px;
        --left-column: 43px;
        --space-large:43px;
    }
    body, header #intro p{
        text-align:left;

    }
    header #intro p{
        margin-bottom: calc(var(--space-large) * 2);
    }
    header #intro{
        max-height: calc(100vh - ((var(--space-large)*3) + var(--space)));
        margin-top:calc(var(--space-large) * 1);
        transform: none;
        top:0;
    }
    #gallery .artist{
        flex-basis:100%;
        margin-right:0;
        margin-bottom: var(--space-large)

    }
    #gallery .artist:nth-child(3n){
        margin-right:0;
    }
    #gallery .artist:nth-child(2n){
        margin-right:0;
    }



    #back-to-home{
        height: 150px;
    }

    #curatorial-statement p{
        margin: var(--space) 0;
        margin-bottom: calc(var(--space-large) * 2)
    }
    #curatorial-statement .sig{
        margin-top:var(--space-large);
        display: block;
    }

    #language-toggle{
        right:auto;
        left:var(--space);
    }
    footer{
        height: calc(var(--space-large) * 1.6);
    }


    .double{
        display: flex;
        flex-direction: column;
    }
    .double .work:first-child{
        margin-right: 0;
    }
    .double .work{
        display: block;
        width: 100%;
    }
    .double .work.exception{
        width: 100%;
        flex-basis: auto;
    }
    .work.medium-horizontal{
        width: 100%;
    }
    .dt{
        display: none;
    }
    .work{
        width: 100%;
    }
    .work.exception{
        width: 80%;
    }
    .main-up{
        width: 30px;
        padding: var(--space);
        margin:0 auto;
        position: relative;
        margin-bottom: calc(var(--space-large)*2);
        display: block;
        left:0;
        top:0;
    }

    main{
        padding-top:0;
        margin-top: calc(100vh - 115px);
    }

    footer h4{
        transform-origin: top right;
        position:absolute; 
        transform: rotate(-90deg);
        top: 0px;
        padding: 5px 10px;
        left: -243px;
        background-color:var(--main-bg-color);
    }
    footer{
        position:fixed;
        bottom:0;
        text-align: left;
        max-height: 50vh;
        transition: 0.5s;
        max-width: 100vw;
        width: 100%;
        height: 300px;
        right:calc(-100vw);
        background-color: rgba(0,0,0,1);
        z-index: 8;
    }
    
    footer.on{
        width: 100vw;
        background-color: rgba(0,0,0,1);
        height: 300px;
        z-index: 99;
        right:0;
    }


    .double.hierarchy .work:first-child, .double.hierarchy .work:nth-child(2), .double.hierarchy2 .work:first-child, .double.hierarchy2 .work:nth-child(2){
        width: auto;
    }
}

